[gd_scene load_steps=14 format=2]

[ext_resource path="res://actors/PhysicsManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/FlashManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/enemies/AggroManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/enemies/spider_drone/textures/spider-drone.png" type="Texture" id=5]
[ext_resource path="res://actors/enemies/spider_drone/spider_drone.gd" type="Script" id=6]
[ext_resource path="res://actors/enemies/spider_drone/states/idle.gd" type="Script" id=7]
[ext_resource path="res://actors/enemies/spider_drone/states/walk.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 10 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.5, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.5, 10 )

[node name="SpiderDrone" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 516
script = ExtResource( 6 )

[node name="Health" parent="." instance=ExtResource( 2 )]
MAX_HEALTH = 3

[node name="FlashManager" parent="." instance=ExtResource( 3 )]
sprite_path = NodePath("../Sprite")
total_duration = 0.3
single_flash_duration = 0.075
flash_color = Color( 1, 1, 1, 1 )

[node name="PhysicsManager" parent="." instance=ExtResource( 1 )]
movement_speed_tiles_per_second = 1.0

[node name="AggroManager" parent="." instance=ExtResource( 4 )]
visible = false

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Walk" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 5 )
vframes = 3
hframes = 4
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -10 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/walk = SubResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, -10 )
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 272

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0.5, -10 )
shape = SubResource( 4 )
